deployment/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqlapi-deployment
spec:
  selector:
    matchLabels:
      app: mysqlapi-pod
  replicas: 2
  template:
    metadata:
      labels:
        app: mysqlapi-pod
    spec:
      containers:
        - name: mysqlapi-container
          image: mysqlapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mysqlapi-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: mysqlapi-pod
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysqlapi-ingress
spec:
  rules:
    - http:
        paths:
          - path: /mysqlapi
            pathType: Prefix
            backend:
              service:
                name: mysqlapi-service
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acctool-deployment
spec:
  selector:
    matchLabels:
      app: acctool-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: acctool-pod
    spec:
      containers:
        - name: acctool-container
          image: acctool:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: acctool-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: acctool-pod
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acctool-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acctool-service
                port:
                  number: 80
